--- a/CoreDemo/CoreDemo/Views/Writer/WriterEditProfile.cshtml
+++ b/CoreDemo/CoreDemo/Views/Writer/WriterEditProfile.cshtml
@@ -16,16 +16,21 @@
                 <form class="forms-sample">
                     <div class="form-group">
                         <label for="exampleInputName1">Yazar Ad Soyad</label>
-                      @Html.TextBoxFor(x=>x.WriterName, new {@class="form-control"})
+                        @Html.TextBoxFor(x => x.WriterName, new { @class = "form-control" })
+                        @Html.HiddenFor(x => x.WriterID, new { @class = "form-control" })
+                        <span asp-validation-for="WriterName" class="text-danger"></span>
+
                     </div>
                     <div class="form-group">
                       
                         <label for="exampleInputEmail3">Yazar Maili</label>
                         @Html.TextBoxFor(x=>x.WriterMail,new {@class="form-control"})
+                        <span asp-validation-for="WriterMail" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword4">Şİfre</label>
                         @Html.PasswordFor(x=>x.WriterPassword,new {@class="form-control"})
+                        <span asp-validation-for="WriterPassword" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label>Yazar Görseli</label>
@@ -42,8 +47,8 @@
                         @Html.TextAreaFor(x=>x.WriterAbout,10,3,new {@class="form-control"})
                     
                     </div>
-                    <button type="submit" class="btn btn-gradient-primary mr-2">Submit</button>
-                    <button class="btn btn-light">Cancel</button>
+                    <button type="submit" class="btn btn-gradient-primary mr-2">Güncelle</button>
+                    <button class="btn btn-light">İptal</button>
                 </form>
             </div>
         </div>
