--- a/CoreDemo/CoreDemo/Views/Shared/Components/WriterMessageNotification/Default.cshtml
+++ b/CoreDemo/CoreDemo/Views/Shared/Components/WriterMessageNotification/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@using EntityLayer.Concrete
 @model List<Message>
-<div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="messageDropdown">
+<div><div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="messageDropdown">
     <h6 class="p-3 mb-0">Mesajlar</h6>
     <div class="dropdown-divider"></div>
     @foreach (var item in Model)
@@ -20,4 +20,4 @@
     }
     <h6 class="p-3 mb-0 text-center">3 Yeni Mesaj</h6>
    
-</div>
+</div></div>
