--- a/CoreDemo/CoreDemo/Views/Shared/_WriterNavbarPartial.cshtml
+++ b/CoreDemo/CoreDemo/Views/Shared/_WriterNavbarPartial.cshtml
@@ -48,6 +48,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/Notification/AllNotifications/">
+                    <span class="menu-title">Tüm Bildirimler</span>
+                    <i class="mdi mdi-message menu-icon"></i>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/Blog/Index">
                     <span class="menu-title">Siteye Git</span>
                     <i class="mdi mdi-car menu-icon"></i>
