--- a/CoreDemo/CoreDemo/Views/Shared/Components/WriterNotification/Default.cshtml
+++ b/CoreDemo/CoreDemo/Views/Shared/Components/WriterNotification/Default.cshtml
@@ -7,20 +7,26 @@
     {
 
 
-    <div class="dropdown-divider"></div>
-    <a class="dropdown-item preview-item">
-        <div class="preview-thumbnail">
-            <div class="@item.NotificationColor">
-                <i class="@item.NotificationTypeSymbol"></i>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item preview-item">
+            <div class="preview-thumbnail">
+                <div class="@item.NotificationColor">
+                    <i class="@item.NotificationTypeSymbol"></i>
+                </div>
             </div>
-        </div>
-        <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
-            <h6 class="preview-subject font-weight-normal mb-1">@item.NotificationType</h6>
-            <p class="text-gray ellipsis mb-0"> @item.NotificationDetails </p>
-        </div>
-    </a>
+            <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
+                <h6 class="preview-subject font-weight-normal mb-1">@item.NotificationType</h6>
+                <p class="text-gray ellipsis mb-0"> @item.NotificationDetails </p>
+            </div>
+        </a>
     }
-  
+
     <div class="dropdown-divider"></div>
-    <h6 class="p-3 mb-0 text-center">Tüm Bildirimleri Gör</h6>
+  
+    <a href="/Notification/AllNotifications/">
+        <h6 class="p-3 mb-0 text-center">
+            Tüm Bildirimleri Gör
+        </h6>
+    </a>
+
 </div>
