--- a/CoreDemo/CoreDemo/Views/Shared/Components/WriterMessageNotification/Default.cshtml
+++ b/CoreDemo/CoreDemo/Views/Shared/Components/WriterMessageNotification/Default.cshtml
@@ -18,6 +18,8 @@
     </a>
 
     }
-    <h6 class="p-3 mb-0 text-center">3 Yeni Mesaj</h6>
+
+    <a class="p-3 mb-0 text-center" href="/Message/InBox">Tüm Mesajlar</a>
+    <h6 class="p-3 mb-0 text-center" >3 Yeni Mesaj</h6>
    
 </div></div>
