--- a/CoreDemo/CoreDemo/Views/Shared/_WriterNavbarPartial.cshtml
+++ b/CoreDemo/CoreDemo/Views/Shared/_WriterNavbarPartial.cshtml
@@ -36,6 +36,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/admin/chart/index">
+                    <span class="menu-title">Admin sayfası</span>
+                    <i class="mdi mdi-format-list-bulleted menu-icon"></i>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/Blog/BlogAdd">
                     <span class="menu-title">Yeni Blog</span>
                     <i class="mdi mdi-chart-bar menu-icon"></i>
