--- a/CoreDemo/CoreDemo/Areas/Admin/Views/Chart/Index.cshtml
+++ b/CoreDemo/CoreDemo/Areas/Admin/Views/Chart/Index.cshtml
@@ -23,9 +23,9 @@
 
     google.charts.load('current', { 'packages': ['corechart'] });
     google.charts.setOnLoadCallback(DrawonLoad);
-    
-    function DrawonLoad(){
-        $(function (){
+
+    function DrawonLoad() {
+        $(function () {
 
             $.ajax({
                 type: 'GET',
@@ -55,9 +55,15 @@
                 }
             });
 
-         })
+        })
     }
 
 </script>
 
+@section scripts
+{
+    <script>
+
+    </script>
+}
 
