--- a/CoreDemo/CoreDemo/Views/RegisterUser/Index.cshtml
+++ b/CoreDemo/CoreDemo/Views/RegisterUser/Index.cshtml
@@ -27,30 +27,47 @@
         <div>
             <div>
 
-                <h1 class="logo-name">IN+</h1>
+                <h3 class="logo-name">IN+ </h3>
 
             </div>
             <h3>Kayıt Ekranı</h3>
-            <p>Create account to see it in action.</p>
-            <form class="m-t" role="form" action="login.html">
+            <p>Yeni Bir Hesap Oluştutun </p>
+            <form class="m-t" role="form" asp-action="Index">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Name" required="">
+                    <span asp-validation-for="@Model.nameSurname" class="text-danger"></span>
+                    <input type="text" class="form-control" asp-for="@Model.nameSurname" placeholder="Adınız Soyadınız" >
                 </div>
-                <div class="form-group">
-                    <input type="email" class="form-control" placeholder="Email" required="">
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Password" required="">
-                </div>
-                <div class="form-group">
-                    <div class="checkbox i-checks"><label> <input type="checkbox"><i></i> Agree the terms and policy </label></div>
-                </div>
-                <button type="submit" class="btn btn-primary block full-width m-b">Register</button>
 
-                <p class="text-muted text-center"><small>Already have an account?</small></p>
-                <a class="btn btn-sm btn-white btn-block" href="login.html">Login</a>
+                <div class="form-group">
+                    <span asp-validation-for="@Model.Mail" class="text-danger"></span>
+                    <input type="email" class="form-control" placeholder="Email" asp-for="@Model.Mail">
+                    <br />
+
+                    <div class="form-group">
+                        <span asp-validation-for="@Model.UserName" class="text-danger"></span>
+                        <input type="text" class="form-control" placeholder="Kullanıcı Adı" asp-for="@Model.UserName">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <span asp-validation-for="@Model.Password" class="text-danger"></span>
+                    <input type="password" class="form-control" placeholder="Şifre" asp-for="@Model.Password" required="">
+                </div>
+                <div class="form-group">
+                    <span asp-validation-for="@Model.ConfirmPassword" class="text-danger"></span>
+                    <input type="password" class="form-control" placeholder="Şifre Tekrarı" asp-for="@Model.ConfirmPassword" required="">
+                </div>
+              
+                <div class="form-group">
+                  
+                    <div class="checkbox i-checks"><label> <input type="checkbox"><i></i> Koşulları Okudum Kabul Ediyorum</label></div>
+                </div>
+                <button type="submit" class="btn btn-primary block full-width m-b">Kaydol</button>
+
+                <p class="text-muted text-center"><small>Hesabım Var</small></p>
+                <a class="btn btn-sm btn-white btn-block" href="/RegisterUser/Login/">Giriş Yap</a>
+                <div class="text-danger" asp-validation-summary="ModelOnly"></div>
             </form>
-            <p class="m-t"> <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small> </p>
+            <p class="m-t"> <small>Asp.Net Core Proje || @DateTime.Now.Year</small> </p>
         </div>
     </div>
 
